[GH-1] Separate access to rules and validator.
Allow parameterizing rules with language.